PyMaker/datas/object2/RawHTML/i13801/Python_DOC_referPages.why-am-i-getting-syntaxerror-on-os-x-python-3-4.txt
<div class="post-text" itemprop="text">
<p>I just got a new MackBook Pro and installed Python 3.4.
I ran the terminal and typed</p>
<pre><code>python3.4
</code></pre>
<p>I got:</p>
<pre><code>Python 3.4.3 (v3.4.3:9b73f1c3e601, Feb 23 2015, 02:52:03) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
</code></pre>
<p>I typed:</p>
<pre><code>&gt;&gt;&gt; print("Hello world") 
Hello world
</code></pre>
<p>All good, but when I tried to do something a bit more complex I ran into trouble, I did:</p>
<pre><code>&gt;&gt;&gt;counter = 5
&gt;&gt;&gt;
&gt;&gt;&gt; while counter &gt; 0:
...     counter -= 1
...     print()
... print("Hello World")
</code></pre>
<p>I get the error:</p>
<pre><code>  File "&lt;stdin&gt;", line 4
print("Hello World")
    ^
SyntaxError: invalid syntax
</code></pre>
<p>My guess is that the error is on the 'print("Hello World")' but I have no clue as to why, I don't need to indent it if I want it to run after the loop is finished. Any help will be appreciated. </p>
</div>
<div class="post-text" itemprop="text">
<p>Notice the "..." prompt? That's telling you that the interactive interpreter knows you are in a block. You'll have to enter a blank line to terminate the block, before doing the final print statement.</p>
<p>This is an artifact of running interactively -- the blank line isn't required when you type your code into a file.</p>
</div>
<div class="post-text" itemprop="text">
<p>Because it is syntax error. </p>
<pre><code>&gt;&gt;&gt; while counter &gt; 0:
...     counter -= 1
...     print()
... print("Hello World")
</code></pre>
<p>this is how python console works - you can see that you have three dots before print('hello world') which indicates that python still expects <strong>indendted</strong> code that belongs to while block. </p>
<p>You need to double-press enter in order to get to normal mode. (Signalized by &gt;&gt;&gt;). Also in future if you encounter similar problems always try to run them from file and not only from console. </p>
</div>
<div class="post-text" itemprop="text">
<p>This is caused by a quirk of python's interactive mode, which treats newlines specially.</p>
<p>When you have a <code>...</code> prompt, it <em>must</em> be followed by a continuation of the preceding compound statement, rather than the beginning of a new statement, which it would in non-interactive mode. Press enter again to make the <code>...</code> prompt go away.</p>
<hr/>
<p>Observer that this fails:</p>
<pre><code>echo $'while False: pass\npass' | python -i
</code></pre>
<p>But this works:</p>
<pre><code>echo $'while False: pass\npass' | python
</code></pre>
<hr/>
<p>You can read the nitty-gritty details <a href="https://docs.python.org/3/reference/grammar.html" rel="nofollow">in the grammar reference</a>. Interactive input uses the <code>single_input</code> start state, and non-interactive input uses the <code>file_input</code> start state.</p>
</div>
<div class="post-text" itemprop="text">
<p>You have to use space for indentation (and ";" to separate two instruction :</p>
<pre><code>&gt;&gt;&gt; counter = 5
&gt;&gt;&gt; while counter &gt; 0:
    counter -= 1
    print("Hello")


Hello
Hello
Hello
Hello
Hello
&gt;&gt;&gt; 
</code></pre>
</div>
<span class="comment-copy">You have to make two lines!</span>
<span class="comment-copy">Stupid interpreter. It's not even the right kind of error. It should be <code>IndentationError</code>!</span>
<span class="comment-copy">Get ipython for yourself</span>
<span class="comment-copy">I have PyCharm, but I wanted to try it on Terminal, cuz I've never used it b4.</span>
<span class="comment-copy">but how do I run the <code>print("Hello World")</code> without having to run the <code>while</code> first? Do I have to build then into a function if I want to run them together one after the other?</span>
<span class="comment-copy">@lokilindo:  You can't. I assume that is why you un-indented the final print statement. If you want it to be part of the loop, indent it to be in the loop. If you want it after, enter a blank line. The while loop will run, and then the final print statement will run. That's just how interactive mode works.</span>
<span class="comment-copy">The OP <i>is</i> using spaces for indentation. I think you've missed the point of the question. Normally, removing one level of indentation ends a block, but it doesn't when running interactively.</span>
<span class="comment-copy">Please, why "-1"? Thanks in advance</span>
<span class="comment-copy">@BryanOakley: So I've try to explain it in the answer. But sometimes tab do not work well in shell, but space work everywhere. And to separate instruction well you have to use ";". No? I'm not right?</span>
<span class="comment-copy">@ Clodion I think they "-1"ed you because you missed part of the explanation. I didn't want to run "Hello World" five times, I wanted to run it AFTER the five spaces of the while loop. Apparently it can't be done without first running the while loop. (unless I do it within a function/method). I still appreciate you trying to help me, I am sorry you got down voted.</span>
<span class="comment-copy">@lokilindo: yes. I put "hello" just for figuring empty lines. It was to show that he have to put it after <code>while</code> is finished. And I've said it in my first comment (just below is question).</span>
